--- a/AdMobView.FormsPlugin.nuspec
+++ b/AdMobView.FormsPlugin.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata minClientVersion="2.8.1">
     <id>Xam.FormsPlugin.AdMobView</id>
-    <version>1.0.1</version>
+    <version>1.0.23</version>
     <title>AdMobView Control Plugin for Xamarin.Forms</title>
     <authors>Houssem Dellai</authors>
     <owners>Houssem Dellai</owners>
@@ -16,30 +16,38 @@
       Supported projects: Xamarin.Android and Windows Phone 8 (Silverlight).
     </description>
     <summary>Add AdMob ads to your Xamarin.Forms project.</summary>
-    <tags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin.forms, windows phone, winphone, wp8, android, xamarin.forms, ios</tags>
+    <tags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin.forms, windows phone, winphone, wp8, android, xamarin.forms</tags>
     <dependencies>
       <dependency id="Xamarin.Forms" version="1.3.1.6296" />
     </dependencies>
   </metadata>
   <files>
+    
     <!--Core-->
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.dll" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.xml" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.pdb" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.pdb" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" 
+          target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.dll" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" 
+          target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.xml" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.pdb" 
+          target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.pdb" />
 
     <!--Win Phone Silverlight-->
     <!--Add reference to AdMob SDK-->
     <file src="packages\GoogleMobileAdsSdkWindowsPhone8-6.5.13\lib\windowsphone8\GoogleAds.dll"
-         target="lib\windowsphone8\GoogleAds.dll" />
+         target="lib\wp8\GoogleAds.dll" />
+    
+    <!--Add reference to the AdMobViewRenderer.cs renderer (due to an error)-->
+    <file src="AdMobView\AdMobView.FormsPlugin.WindowsPhone\AdMobViewRenderer.cs" 
+          target="content\wp8\Renderers"/>
 
-    <file src="AdMobView\AdMobView.FormsPlugin.WindowsPhone\bin\Release\AdMobView.FormsPlugin.WindowsPhone.dll"
+    <!--<file src="AdMobView\AdMobView.FormsPlugin.WindowsPhone\bin\Release\AdMobView.FormsPlugin.WindowsPhone.dll"
           target="lib\wp8\AdMobView.FormsPlugin.WindowsPhone.dll" />
 
     <file src="AdMobView\AdMobView.FormsPlugin.WindowsPhone\bin\Release\AdMobView.FormsPlugin.WindowsPhone.xml"
           target="lib\wp8\AdMobView.FormsPlugin.WindowsPhone.xml" />
 
     <file src="AdMobView\AdMobView.FormsPlugin.WindowsPhone\bin\Release\AdMobView.FormsPlugin.WindowsPhone.pdb"
-          target="lib\wp8\AdMobView.FormsPlugin.WindowsPhone.pdb" />
+          target="lib\wp8\AdMobView.FormsPlugin.WindowsPhone.pdb" />-->
 
     <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll"
           target="lib\wp8\AdMobView.FormsPlugin.Abstractions.dll" />
@@ -52,6 +60,10 @@
 
 
     <!--Xamarin.Android-->
+    <!--Add reference to readme.txt file-->
+    <file src="AdMobView\AdMobView.FormsPlugin.Android\readme.txt"
+          target="content\MonoAndroid10"/>
+    
     <!--Adding reference to Xamarin.GooglePlayServices-->
     <file src="packages\Xamarin.GooglePlayServices\lib\MonoAndroid10\Xamarin.GooglePlayServices.Ads.dll"
         target="lib\MonoAndroid10\Xamarin.GooglePlayServices.Ads.dll" />
@@ -68,15 +80,22 @@
     <file src="AdMobView\AdMobView.FormsPlugin.Android\bin\Release\AdMobView.FormsPlugin.Android.pdb"
           target="lib\MonoAndroid10\AdMobView.FormsPlugin.Android.pdb" />
 
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.dll" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.xml" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.pdb" target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.pdb" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" 
+          target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.dll" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" 
+          target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.xml" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.pdb" 
+          target="lib\MonoAndroid10\AdMobView.FormsPlugin.Abstractions.pdb" />
 
     <!--Xamarin.iOSUnified-->
-    <file src="AdMobView\AdMobView.FormsPlugin.iOSUnified\bin\iPhone\Release\AdMobView.FormsPlugin.iOSUnified.dll" target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.iOSUnified.dll" />
-    <file src="AdMobView\AdMobView.FormsPlugin.iOSUnified\bin\iPhone\Release\AdMobView.FormsPlugin.iOSUnified.xml" target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.iOSUnified.xml" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.dll" />
-    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.xml" />
+    <!--<file src="AdMobView\AdMobView.FormsPlugin.iOSUnified\bin\iPhone\Release\AdMobView.FormsPlugin.iOSUnified.dll" 
+          target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.iOSUnified.dll" />
+    <file src="AdMobView\AdMobView.FormsPlugin.iOSUnified\bin\iPhone\Release\AdMobView.FormsPlugin.iOSUnified.xml" 
+          target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.iOSUnified.xml" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.dll" 
+          target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.dll" />
+    <file src="AdMobView\AdMobView.FormsPlugin.Abstractions\bin\Release\AdMobView.FormsPlugin.Abstractions.xml" 
+          target="lib\Xamarin.iOS10\AdMobView.FormsPlugin.Abstractions.xml" />-->
 
   </files>
 </package>
