--- a/AdMobView/AdMobView.FormsPlugin.WindowsPhone/AdMobView.FormsPlugin.WindowsPhone.csproj
+++ b/AdMobView/AdMobView.FormsPlugin.WindowsPhone/AdMobView.FormsPlugin.WindowsPhone.csproj
@@ -86,7 +86,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AdMobViewImplementation.cs" />
+    <Compile Include="AdMobViewRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
